--- a/DMML_PROJECT.ipynb
+++ b/DMML_PROJECT.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMB00vkUzM4Bx2aO6txf5iX",
+      "authorship_tag": "ABX9TyNVcLZpsBaO+Q8C8/TTTW2h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -222,12 +222,61 @@
     {
       "cell_type": "code",
       "source": [
-        "def pipeWithTFIDF(classifier):\n"
+        "#Function to create a pipeline with TFIDF and a classifier\n",
+        "def pipeWithTFIDF(myClassifier):\n",
+        "  pipe = Pipeline([('vectorizer', tfidf),\n",
+        "                 ('classifier', myClassifier)])\n",
+        "  return pipe"
       ],
       "metadata": {
         "id": "waLBsgs2NsNr"
       },
-      "execution_count": null,
+      "execution_count": 123,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Method to fit a model, make pradiction with it and get evaluation stuff\n",
+        "def fitPredictAndEvaluateModel(pipe):\n",
+        "  # Fit model on training set\n",
+        "  pipe.fit(X_train, y_train)\n",
+        "\n",
+        "  # Predictions\n",
+        "  y_pred= pipe_knn.predict(X_test)\n",
+        "\n",
+        "  # Evaluation\n",
+        "  evaluate(y_test, y_pred)\n",
+        "\n",
+        "  return y_pred"
+      ],
+      "metadata": {
+        "id": "-3NxLRi0Qjt1"
+      },
+      "execution_count": 124,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Method to make a gride search and print the results\n",
+        "def getResultsGridSearch(myGs):\n",
+        "  #Pipeline preparation\n",
+        "  pipe = pipeWithTFIDF(myGs)\n",
+        "\n",
+        "  #fit\n",
+        "  pipe.fit(X_train, y_train)\n",
+        "\n",
+        "  #Print results\n",
+        "  print('Best Score : ')\n",
+        "  print(myGs.best_score_)\n",
+        "  print('Best Params : ')\n",
+        "  print(myGs.best_params_)"
+      ],
+      "metadata": {
+        "id": "1dqPOhH9VbUb"
+      },
+      "execution_count": 127,
       "outputs": []
     },
     {
@@ -243,96 +292,20 @@
       "cell_type": "code",
       "source": [
         "#Define classifier and pipeline creation\n",
-        "classifier = LogisticRegression(solver='lbfgs', random_state=0)\n",
-        "pipe = Pipeline([('vectorizer', tfidf),\n",
-        "                 ('classifier', classifier)])\n",
+        "LR = LogisticRegression(solver='lbfgs', random_state=0)\n",
+        "pipe_LR = pipeWithTFIDF(LR)\n",
         "\n",
-        "\n",
-        "# Fit model on training set\n",
-        "pipe.fit(X_train, y_train)\n",
-        "\n",
-        "# Predictions\n",
-        "y_pred = pipe.predict(X_test)\n",
-        "\n",
-        "# Evaluation\n",
-        "evaluate(y_test, y_pred)"
+        "# fit, predict and evaluate\n",
+        "y_pred_LR = fitPredictAndEvaluateModel(pipe_LR)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_Nggt40pC5d6",
-        "outputId": "ec326b6d-8252-4557-a701-6c05efe389e1"
+        "outputId": "bd2b21be-8fc0-4969-c7ab-9ee39ec2a037"
       },
-      "execution_count": 43,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "CONFUSION MATRIX:\n",
-            "[[93 31 21 10  4  2]\n",
-            " [54 60 30  6  6  8]\n",
-            " [12 38 64 17  9 20]\n",
-            " [ 6  6 15 66 27 24]\n",
-            " [ 4  4 10 37 73 45]\n",
-            " [ 7  8  8 19 24 92]]\n",
-            "ACCURACY SCORE:\n",
-            "0.4667\n",
-            "CLASSIFICATION REPORT:\n",
-            "\tPrecision: 0.4645\n",
-            "\tRecall: 0.4677\n",
-            "\tF1_Score: 0.4640\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## KNN & hyperparameter optimisation (no data cleaning)"
-      ],
-      "metadata": {
-        "id": "XlrgLzHrERoB"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "###Knn Basic"
-      ],
-      "metadata": {
-        "id": "XVykmI_ZEVaM"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Import KNeighborsClassifier\n",
-        "from sklearn.neighbors import KNeighborsClassifier\n",
-        "\n",
-        "# Define classifier and pipeline creation\n",
-        "classifier_knn = KNeighborsClassifier()\n",
-        "pipe_knn = Pipeline([('vectorizer', tfidf),\n",
-        "                 ('classifier', classifier_knn)])\n",
-        "\n",
-        "# Fit model on training set\n",
-        "pipe_knn.fit(X_train, y_train)\n",
-        "\n",
-        "# Predictions\n",
-        "y_pred_knn = pipe_knn.predict(X_test)\n",
-        "\n",
-        "# Evaluation\n",
-        "evaluate(y_test, y_pred_knn)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MgqngxgrETfD",
-        "outputId": "394b642d-599c-490e-8fb5-51e97a1f1649"
-      },
-      "execution_count": 44,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
@@ -358,7 +331,77 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Knn with hyperparameter optimisation "
+        "## KNN & hyperparameter optimization (no data cleaning)"
+      ],
+      "metadata": {
+        "id": "XlrgLzHrERoB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import KNeighborsClassifier\n",
+        "from sklearn.neighbors import KNeighborsClassifier"
+      ],
+      "metadata": {
+        "id": "-MbRX89zRgvl"
+      },
+      "execution_count": 97,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Knn Basic"
+      ],
+      "metadata": {
+        "id": "XVykmI_ZEVaM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define classifier and pipeline creation\n",
+        "knn = KNeighborsClassifier()\n",
+        "pipe_knn = pipeWithTFIDF(knn)\n",
+        "\n",
+        "# fit, predict and evaluate\n",
+        "y_pred_knn = fitPredictAndEvaluateModel(pipe_knn)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MgqngxgrETfD",
+        "outputId": "535381f6-1c96-44a4-d483-10b0a7a340f1"
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CONFUSION MATRIX:\n",
+            "[[121  28   8   1   1   2]\n",
+            " [ 98  51  12   1   1   1]\n",
+            " [ 81  39  33   3   1   3]\n",
+            " [ 49  30  19  29   3  14]\n",
+            " [ 48  36  29  15  29  16]\n",
+            " [ 37  29  17  23   9  43]]\n",
+            "ACCURACY SCORE:\n",
+            "0.3187\n",
+            "CLASSIFICATION REPORT:\n",
+            "\tPrecision: 0.4007\n",
+            "\tRecall: 0.3183\n",
+            "\tF1_Score: 0.3022\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Knn with hyperparameter optimization "
       ],
       "metadata": {
         "id": "IxBAC36yEwib"
@@ -367,100 +410,226 @@
     {
       "cell_type": "code",
       "source": [
+        "#Preparation of the GridSearch\n",
         "grid_params = { 'n_neighbors' : [5,7,9,11,13,15],\n",
         "               'weights' : ['uniform','distance'],\n",
         "               'metric' : ['minkowski','euclidean','manhattan']}\n",
         "gs = GridSearchCV(KNeighborsClassifier(), grid_params, verbose = 1, cv=3, n_jobs = -1)\n",
         "\n",
-        "pipe_knn_gridSearch = Pipeline([('vectorizer', tfidf),\n",
-        "                 ('classifier', gs)])\n",
-        "\n",
-        "pipe_knn_gridSearch.fit(X_train, y_train)"
+        "#GridSearch and Print Results\n",
+        "getResultsGridSearch(gs)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lxrqEPRjE0U6",
-        "outputId": "5d7379a7-e564-44c1-928b-f05ab13b2c7d"
+        "outputId": "5f2ab8e0-438c-45da-bdef-24dc140013e2"
       },
-      "execution_count": 78,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fitting 3 folds for each of 36 candidates, totalling 108 fits\n"
+            "Fitting 3 folds for each of 36 candidates, totalling 108 fits\n",
+            "Best Score : \n",
+            "0.3466145833333334\n",
+            "Best Params : \n",
+            "{'metric': 'minkowski', 'n_neighbors': 11, 'weights': 'distance'}\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Pipeline(steps=[('vectorizer', TfidfVectorizer()),\n",
-              "                ('classifier',\n",
-              "                 GridSearchCV(cv=3, estimator=KNeighborsClassifier(), n_jobs=-1,\n",
-              "                              param_grid={'metric': ['minkowski', 'euclidean',\n",
-              "                                                     'manhattan'],\n",
-              "                                          'n_neighbors': [5, 7, 9, 11, 13, 15],\n",
-              "                                          'weights': ['uniform', 'distance']},\n",
-              "                              verbose=1))])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 78
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "gs.best_score_"
+        "# Define classifier and pipeline creation \n",
+        "## This time we put the parameters we got in previous step\n",
+        "knn_GS = KNeighborsClassifier(n_neighbors = 11, weights = 'distance',metric = 'minkowski')\n",
+        "pipe_knn = pipeWithTFIDF(knn)\n",
+        "\n",
+        "# fit, predict and evaluate\n",
+        "y_pred_knn_GS = fitPredictAndEvaluateModel(pipe_knn)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "xYXnl6X5NcAc",
-        "outputId": "22a9893d-46c0-489e-e17b-565163dccf76"
+        "id": "CqNCllR4QaAf",
+        "outputId": "64ad94f3-3aa9-47a6-ebda-de901f4edc97"
       },
-      "execution_count": 81,
+      "execution_count": 102,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.3466145833333334"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 81
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CONFUSION MATRIX:\n",
+            "[[121  28   8   1   1   2]\n",
+            " [ 98  51  12   1   1   1]\n",
+            " [ 81  39  33   3   1   3]\n",
+            " [ 49  30  19  29   3  14]\n",
+            " [ 48  36  29  15  29  16]\n",
+            " [ 37  29  17  23   9  43]]\n",
+            "ACCURACY SCORE:\n",
+            "0.3187\n",
+            "CLASSIFICATION REPORT:\n",
+            "\tPrecision: 0.4007\n",
+            "\tRecall: 0.3183\n",
+            "\tF1_Score: 0.3022\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Decision Tree & Hyperparameter optimization (no data cleaning))"
+      ],
+      "metadata": {
+        "id": "AMDalKeNSaKr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import Decision Tree Classifier\n",
+        "from sklearn.tree import DecisionTreeClassifier"
+      ],
+      "metadata": {
+        "id": "DeqqJL3oTF09"
+      },
+      "execution_count": 103,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Decision tree Basic"
+      ],
+      "metadata": {
+        "id": "IqGVDxEBSiVy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define classifier and pipeline creation\n",
+        "dt = DecisionTreeClassifier()\n",
+        "pipe_dt = pipeWithTFIDF(dt)\n",
+        "\n",
+        "# fit, predict and evaluate\n",
+        "y_pred_dt = fitPredictAndEvaluateModel(pipe_dt)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PO3bqK_DSc1I",
+        "outputId": "4770e4b7-427c-4f53-8913-6ac56f822465"
+      },
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CONFUSION MATRIX:\n",
+            "[[121  28   8   1   1   2]\n",
+            " [ 98  51  12   1   1   1]\n",
+            " [ 81  39  33   3   1   3]\n",
+            " [ 49  30  19  29   3  14]\n",
+            " [ 48  36  29  15  29  16]\n",
+            " [ 37  29  17  23   9  43]]\n",
+            "ACCURACY SCORE:\n",
+            "0.3187\n",
+            "CLASSIFICATION REPORT:\n",
+            "\tPrecision: 0.4007\n",
+            "\tRecall: 0.3183\n",
+            "\tF1_Score: 0.3022\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Decision Tree with hyperparameter optimization"
+      ],
+      "metadata": {
+        "id": "g8a1lcttTZux"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Preparation of the GridSearch\n",
+        "grid_params = {'max_depth' : range(1,60)}\n",
+        "gs = GridSearchCV(DecisionTreeClassifier(), grid_params, verbose = 1, cv=3, n_jobs = -1)\n",
+        "\n",
+        "#GridSearch and Print Results\n",
+        "getResultsGridSearch(gs)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3ozK0b1dUBLW",
+        "outputId": "84063fe9-c10d-430a-8d0b-4fba2f15df79"
+      },
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 3 folds for each of 59 candidates, totalling 177 fits\n",
+            "Best Score : \n",
+            "0.3283854166666667\n",
+            "Best Params : \n",
+            "{'max_depth': 43}\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "gs.best_params_"
+        "# Define classifier and pipeline creation\n",
+        "dt = DecisionTreeClassifier(max_depth=43)\n",
+        "pipe_dt_GS = pipeWithTFIDF(dt)\n",
+        "\n",
+        "# fit, predict and evaluate\n",
+        "y_pred_dt_GS = fitPredictAndEvaluateModel(pipe_dt_GS)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "VUTj2uxlNjig",
-        "outputId": "98465805-a1e1-4b18-8981-a100248e2ff8"
+        "id": "VqYmKqskWG4C",
+        "outputId": "42966604-24d6-4adb-d4ba-26f514ffa02f"
       },
-      "execution_count": 82,
+      "execution_count": 122,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'metric': 'minkowski', 'n_neighbors': 11, 'weights': 'distance'}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 82
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CONFUSION MATRIX:\n",
+            "[[121  28   8   1   1   2]\n",
+            " [ 98  51  12   1   1   1]\n",
+            " [ 81  39  33   3   1   3]\n",
+            " [ 49  30  19  29   3  14]\n",
+            " [ 48  36  29  15  29  16]\n",
+            " [ 37  29  17  23   9  43]]\n",
+            "ACCURACY SCORE:\n",
+            "0.3187\n",
+            "CLASSIFICATION REPORT:\n",
+            "\tPrecision: 0.4007\n",
+            "\tRecall: 0.3183\n",
+            "\tF1_Score: 0.3022\n"
+          ]
         }
       ]
     }
