--- a/DMML_PROJECT.ipynb
+++ b/DMML_PROJECT.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVcLZpsBaO+Q8C8/TTTW2h",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNhfPSsghULdOpopntpyLoy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 2,
       "metadata": {
         "id": "s2wWDwCv-Oh8"
       },
@@ -82,7 +83,7 @@
       "metadata": {
         "id": "6RnY6303AE1T"
       },
-      "execution_count": 22,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -105,9 +106,9 @@
           "height": 269
         },
         "id": "5Cp2bSfe_wx8",
-        "outputId": "8fbce084-89af-49a2-c440-53f9e38f7097"
+        "outputId": "f45278f4-6148-4d39-dae3-2be396e63e9d"
       },
-      "execution_count": 33,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -133,9 +134,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "79DVvsiHBbWA",
-        "outputId": "75e303c1-2c4c-4ec9-a3da-7b83e6fc00f1"
+        "outputId": "e9d0bb13-41cb-4986-f194-d55ec0df9cbc"
       },
-      "execution_count": 34,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -149,7 +150,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 5
         }
       ]
     },
@@ -165,9 +166,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e4h2gNaXAYZK",
-        "outputId": "5288a1b2-9712-4713-bc8a-17be9ebc21de"
+        "outputId": "2212fbef-48d2-4a28-973f-b7f31fde64d2"
       },
-      "execution_count": 29,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,7 +199,7 @@
       "metadata": {
         "id": "adbHRe4UC9gk"
       },
-      "execution_count": 41,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -216,7 +217,7 @@
       "metadata": {
         "id": "z8mqzqXtDkwe"
       },
-      "execution_count": 42,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -231,7 +232,7 @@
       "metadata": {
         "id": "waLBsgs2NsNr"
       },
-      "execution_count": 123,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -243,7 +244,7 @@
         "  pipe.fit(X_train, y_train)\n",
         "\n",
         "  # Predictions\n",
-        "  y_pred= pipe_knn.predict(X_test)\n",
+        "  y_pred= pipe.predict(X_test)\n",
         "\n",
         "  # Evaluation\n",
         "  evaluate(y_test, y_pred)\n",
@@ -253,7 +254,7 @@
       "metadata": {
         "id": "-3NxLRi0Qjt1"
       },
-      "execution_count": 124,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -276,7 +277,7 @@
       "metadata": {
         "id": "1dqPOhH9VbUb"
       },
-      "execution_count": 127,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -303,27 +304,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_Nggt40pC5d6",
-        "outputId": "bd2b21be-8fc0-4969-c7ab-9ee39ec2a037"
+        "outputId": "b052a536-16ac-465e-fea3-61c94dc7d101"
       },
-      "execution_count": 128,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "CONFUSION MATRIX:\n",
-            "[[121  28   8   1   1   2]\n",
-            " [ 98  51  12   1   1   1]\n",
-            " [ 81  39  33   3   1   3]\n",
-            " [ 49  30  19  29   3  14]\n",
-            " [ 48  36  29  15  29  16]\n",
-            " [ 37  29  17  23   9  43]]\n",
+            "[[93 31 21 10  4  2]\n",
+            " [54 60 30  6  6  8]\n",
+            " [12 38 64 17  9 20]\n",
+            " [ 6  6 15 66 27 24]\n",
+            " [ 4  4 10 37 73 45]\n",
+            " [ 7  8  8 19 24 92]]\n",
             "ACCURACY SCORE:\n",
-            "0.3187\n",
+            "0.4667\n",
             "CLASSIFICATION REPORT:\n",
-            "\tPrecision: 0.4007\n",
-            "\tRecall: 0.3183\n",
-            "\tF1_Score: 0.3022\n"
+            "\tPrecision: 0.4645\n",
+            "\tRecall: 0.4677\n",
+            "\tF1_Score: 0.4640\n"
           ]
         }
       ]
@@ -346,7 +347,7 @@
       "metadata": {
         "id": "-MbRX89zRgvl"
       },
-      "execution_count": 97,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -373,9 +374,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MgqngxgrETfD",
-        "outputId": "535381f6-1c96-44a4-d483-10b0a7a340f1"
+        "outputId": "ba4154ef-d16b-4515-8a6e-ac32df8a41e4"
       },
-      "execution_count": 98,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -411,6 +412,7 @@
       "cell_type": "code",
       "source": [
         "#Preparation of the GridSearch\n",
+        "seed = 0\n",
         "grid_params = { 'n_neighbors' : [5,7,9,11,13,15],\n",
         "               'weights' : ['uniform','distance'],\n",
         "               'metric' : ['minkowski','euclidean','manhattan']}\n",
@@ -424,9 +426,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lxrqEPRjE0U6",
-        "outputId": "5f2ab8e0-438c-45da-bdef-24dc140013e2"
+        "outputId": "33ccdfbc-1ec9-438d-bbb6-69a10c79d517"
       },
-      "execution_count": 112,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,9 +459,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CqNCllR4QaAf",
-        "outputId": "64ad94f3-3aa9-47a6-ebda-de901f4edc97"
+        "outputId": "d716f205-e0d5-4a1d-a694-26387117c009"
       },
-      "execution_count": 102,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,7 +502,7 @@
       "metadata": {
         "id": "DeqqJL3oTF09"
       },
-      "execution_count": 103,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -516,7 +518,7 @@
       "cell_type": "code",
       "source": [
         "# Define classifier and pipeline creation\n",
-        "dt = DecisionTreeClassifier()\n",
+        "dt = DecisionTreeClassifier(random_state=0)\n",
         "pipe_dt = pipeWithTFIDF(dt)\n",
         "\n",
         "# fit, predict and evaluate\n",
@@ -527,27 +529,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PO3bqK_DSc1I",
-        "outputId": "4770e4b7-427c-4f53-8913-6ac56f822465"
+        "outputId": "93adea3d-4401-4a86-d931-872fab957f6d"
       },
-      "execution_count": 104,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "CONFUSION MATRIX:\n",
-            "[[121  28   8   1   1   2]\n",
-            " [ 98  51  12   1   1   1]\n",
-            " [ 81  39  33   3   1   3]\n",
-            " [ 49  30  19  29   3  14]\n",
-            " [ 48  36  29  15  29  16]\n",
-            " [ 37  29  17  23   9  43]]\n",
+            "[[78 38 25 11  2  7]\n",
+            " [49 54 33 18  3  7]\n",
+            " [24 41 37 25 18 15]\n",
+            " [10 20 30 38 24 22]\n",
+            " [ 8 19 31 39 39 37]\n",
+            " [15 13 28 33 30 39]]\n",
             "ACCURACY SCORE:\n",
-            "0.3187\n",
+            "0.2969\n",
             "CLASSIFICATION REPORT:\n",
-            "\tPrecision: 0.4007\n",
-            "\tRecall: 0.3183\n",
-            "\tF1_Score: 0.3022\n"
+            "\tPrecision: 0.2986\n",
+            "\tRecall: 0.2969\n",
+            "\tF1_Score: 0.2945\n"
           ]
         }
       ]
@@ -555,7 +557,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Decision Tree with hyperparameter optimization"
+        "###Decision Tree with hyperparameter optimization"
       ],
       "metadata": {
         "id": "g8a1lcttTZux"
@@ -565,6 +567,7 @@
       "cell_type": "code",
       "source": [
         "#Preparation of the GridSearch\n",
+        "seed = 0\n",
         "grid_params = {'max_depth' : range(1,60)}\n",
         "gs = GridSearchCV(DecisionTreeClassifier(), grid_params, verbose = 1, cv=3, n_jobs = -1)\n",
         "\n",
@@ -576,9 +579,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3ozK0b1dUBLW",
-        "outputId": "84063fe9-c10d-430a-8d0b-4fba2f15df79"
+        "outputId": "5d788c2e-41dd-463f-a3e7-4fcab24da937"
       },
-      "execution_count": 120,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,9 +589,9 @@
           "text": [
             "Fitting 3 folds for each of 59 candidates, totalling 177 fits\n",
             "Best Score : \n",
-            "0.3283854166666667\n",
+            "0.3260416666666666\n",
             "Best Params : \n",
-            "{'max_depth': 43}\n"
+            "{'max_depth': 47}\n"
           ]
         }
       ]
@@ -597,7 +600,7 @@
       "cell_type": "code",
       "source": [
         "# Define classifier and pipeline creation\n",
-        "dt = DecisionTreeClassifier(max_depth=43)\n",
+        "dt = DecisionTreeClassifier(max_depth=43, random_state=0)\n",
         "pipe_dt_GS = pipeWithTFIDF(dt)\n",
         "\n",
         "# fit, predict and evaluate\n",
@@ -608,27 +611,87 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VqYmKqskWG4C",
-        "outputId": "42966604-24d6-4adb-d4ba-26f514ffa02f"
+        "outputId": "9dabc317-68a4-47cd-bb47-ecc2fd3b5bae"
       },
-      "execution_count": 122,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "CONFUSION MATRIX:\n",
-            "[[121  28   8   1   1   2]\n",
-            " [ 98  51  12   1   1   1]\n",
-            " [ 81  39  33   3   1   3]\n",
-            " [ 49  30  19  29   3  14]\n",
-            " [ 48  36  29  15  29  16]\n",
-            " [ 37  29  17  23   9  43]]\n",
+            "[[84 34 29  7  1  6]\n",
+            " [48 53 36 15  4  8]\n",
+            " [34 39 38 18 17 14]\n",
+            " [ 9 23 27 44 19 22]\n",
+            " [14 19 27 47 35 31]\n",
+            " [16 12 27 37 32 34]]\n",
             "ACCURACY SCORE:\n",
-            "0.3187\n",
+            "0.3000\n",
             "CLASSIFICATION REPORT:\n",
-            "\tPrecision: 0.4007\n",
-            "\tRecall: 0.3183\n",
-            "\tF1_Score: 0.3022\n"
+            "\tPrecision: 0.2987\n",
+            "\tRecall: 0.3009\n",
+            "\tF1_Score: 0.2947\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Random Forest (no data cleaning)"
+      ],
+      "metadata": {
+        "id": "GG4m1owaadYQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier"
+      ],
+      "metadata": {
+        "id": "ycgLD_weageC"
+      },
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define classifier and pipeline creation\n",
+        "rf = RandomForestClassifier(random_state=0)\n",
+        "pipe_rf = pipeWithTFIDF(rf)\n",
+        "\n",
+        "# fit, predict and evaluate\n",
+        "y_pred_rf = fitPredictAndEvaluateModel(pipe_rf)"
+      ],
+      "metadata": {
+        "id": "MollJ3ViapuQ",
+        "outputId": "bcfa32eb-1e43-4f2e-d8d5-8bfab3d3deb5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CONFUSION MATRIX:\n",
+            "[[125  20   7   7   2   0]\n",
+            " [ 83  51  21   7   2   0]\n",
+            " [ 39  39  47  20   6   9]\n",
+            " [ 17  11  13  68  23  12]\n",
+            " [ 16  16  23  46  46  26]\n",
+            " [ 19  13  10  33  23  60]]\n",
+            "ACCURACY SCORE:\n",
+            "0.4135\n",
+            "CLASSIFICATION REPORT:\n",
+            "\tPrecision: 0.4223\n",
+            "\tRecall: 0.4165\n",
+            "\tF1_Score: 0.4014\n"
           ]
         }
       ]
