--- a/DMML_PROJECT.ipynb
+++ b/DMML_PROJECT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNhfPSsghULdOpopntpyLoy",
+      "authorship_tag": "ABX9TyOSyHl5kQm0kqpkS6/PBgCT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -205,7 +205,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Function to evaluate the model\n",
+        "#Method to evaluate the model\n",
         "def evaluate(true, pred):\n",
         "    precision = precision_score(true, pred,average='macro')\n",
         "    recall = recall_score(true, pred,average='macro')\n",
@@ -223,7 +223,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Function to create a pipeline with TFIDF and a classifier\n",
+        "#Method to create a pipeline with TFIDF and a classifier\n",
         "def pipeWithTFIDF(myClassifier):\n",
         "  pipe = Pipeline([('vectorizer', tfidf),\n",
         "                 ('classifier', myClassifier)])\n",
@@ -667,11 +667,11 @@
         "y_pred_rf = fitPredictAndEvaluateModel(pipe_rf)"
       ],
       "metadata": {
-        "id": "MollJ3ViapuQ",
-        "outputId": "bcfa32eb-1e43-4f2e-d8d5-8bfab3d3deb5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MollJ3ViapuQ",
+        "outputId": "bcfa32eb-1e43-4f2e-d8d5-8bfab3d3deb5"
       },
       "execution_count": 52,
       "outputs": [
