--- a/DMML_PROJECT.ipynb
+++ b/DMML_PROJECT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOSyHl5kQm0kqpkS6/PBgCT",
+      "authorship_tag": "ABX9TyP3iBj0OT5TYjv4lRO3slbc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -692,6 +692,126 @@
             "\tPrecision: 0.4223\n",
             "\tRecall: 0.4165\n",
             "\tF1_Score: 0.4014\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##LinearSVC"
+      ],
+      "metadata": {
+        "id": "ipqjaG5Nbz-q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.svm import LinearSVC"
+      ],
+      "metadata": {
+        "id": "LjISwCFbb4IS"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define classifier and pipeline creation\n",
+        "Lsvc = LinearSVC(random_state=0)\n",
+        "pipe_Lsvc = pipeWithTFIDF(Lsvc)\n",
+        "\n",
+        "# fit, predict and evaluate\n",
+        "y_pred_Lsvc = fitPredictAndEvaluateModel(pipe_Lsvc)"
+      ],
+      "metadata": {
+        "id": "jGBM7VlJb9IB",
+        "outputId": "d5557194-c8df-4b39-a938-1e87be3e4a94",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CONFUSION MATRIX:\n",
+            "[[96 39 15  5  3  3]\n",
+            " [52 65 32  3  5  7]\n",
+            " [13 38 74 10  6 19]\n",
+            " [ 5 10 19 61 24 25]\n",
+            " [ 8  8 16 35 66 40]\n",
+            " [ 6 11  8 16 22 95]]\n",
+            "ACCURACY SCORE:\n",
+            "0.4760\n",
+            "CLASSIFICATION REPORT:\n",
+            "\tPrecision: 0.4767\n",
+            "\tRecall: 0.4769\n",
+            "\tF1_Score: 0.4737\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##MultinomialNB"
+      ],
+      "metadata": {
+        "id": "P96Tvz-mc29u"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.naive_bayes import MultinomialNB"
+      ],
+      "metadata": {
+        "id": "KESY4KZEc5nY"
+      },
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define classifier and pipeline creation\n",
+        "mnb = MultinomialNB()\n",
+        "pipe_mnb = pipeWithTFIDF(mnb)\n",
+        "\n",
+        "# fit, predict and evaluate\n",
+        "y_pred_mnb = fitPredictAndEvaluateModel(pipe_mnb)"
+      ],
+      "metadata": {
+        "id": "4tMuNl4bc76c",
+        "outputId": "797993fe-b00c-45da-8aad-923f71d0d17c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CONFUSION MATRIX:\n",
+            "[[ 84  44  25   4   1   3]\n",
+            " [ 39  79  31   3   2  10]\n",
+            " [  7  43  80   6   4  20]\n",
+            " [  1  10  23  60  20  30]\n",
+            " [  2   9  15  25  53  69]\n",
+            " [  5  13   8  10  15 107]]\n",
+            "ACCURACY SCORE:\n",
+            "0.4823\n",
+            "CLASSIFICATION REPORT:\n",
+            "\tPrecision: 0.5014\n",
+            "\tRecall: 0.4839\n",
+            "\tF1_Score: 0.4795\n"
           ]
         }
       ]
