--- a/DMML_PROJECT.ipynb
+++ b/DMML_PROJECT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP3iBj0OT5TYjv4lRO3slbc",
+      "authorship_tag": "ABX9TyPdW6APOAc/Lry15tD8yc9v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -727,11 +727,11 @@
         "y_pred_Lsvc = fitPredictAndEvaluateModel(pipe_Lsvc)"
       ],
       "metadata": {
-        "id": "jGBM7VlJb9IB",
-        "outputId": "d5557194-c8df-4b39-a938-1e87be3e4a94",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jGBM7VlJb9IB",
+        "outputId": "d5557194-c8df-4b39-a938-1e87be3e4a94"
       },
       "execution_count": 54,
       "outputs": [
@@ -787,11 +787,11 @@
         "y_pred_mnb = fitPredictAndEvaluateModel(pipe_mnb)"
       ],
       "metadata": {
-        "id": "4tMuNl4bc76c",
-        "outputId": "797993fe-b00c-45da-8aad-923f71d0d17c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4tMuNl4bc76c",
+        "outputId": "797993fe-b00c-45da-8aad-923f71d0d17c"
       },
       "execution_count": 58,
       "outputs": [
@@ -815,6 +815,108 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Ensembles\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "lLa5YVLddsDN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import VotingClassifier"
+      ],
+      "metadata": {
+        "id": "3kLiFCZ4duTo"
+      },
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Definition of an ensemble with a LR and a MNB\n",
+        "soft_voting_clf = VotingClassifier(estimators=[('LR', pipe_LR), ('mnb', pipe_mnb) ], voting='soft')\n",
+        "\n",
+        "#Train\n",
+        "soft_voting_clf.fit(X_train, y_train) # training\n",
+        "\n",
+        "#Pred\n",
+        "y_pred = soft_voting_clf.predict(X_test)\n",
+        "\n",
+        "#Evaluate\n",
+        "evaluate(y_test, y_pred)"
+      ],
+      "metadata": {
+        "id": "R8D3Mo_8d9IP",
+        "outputId": "777fa39c-f09d-4fac-9f0d-1646ad8cd5eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CONFUSION MATRIX:\n",
+            "[[ 91  36  22   7   2   3]\n",
+            " [ 48  69  30   4   4   9]\n",
+            " [ 12  38  70  13   5  22]\n",
+            " [  5   4  18  65  26  26]\n",
+            " [  4   5  15  32  63  54]\n",
+            " [  3   9  10  15  18 103]]\n",
+            "ACCURACY SCORE:\n",
+            "0.4802\n",
+            "CLASSIFICATION REPORT:\n",
+            "\tPrecision: 0.4829\n",
+            "\tRecall: 0.4818\n",
+            "\tF1_Score: 0.4773\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Doc2Vec & Logistic Regression (With data cleaning)"
+      ],
+      "metadata": {
+        "id": "jekvZA3TfweS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Data Cleaning"
+      ],
+      "metadata": {
+        "id": "AYTjjGmKf5r9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### StopWords"
+      ],
+      "metadata": {
+        "id": "pt2I2n8Nf7vm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YFBkL7Xef4LL"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
